--- a/app.html
+++ b/app.html
@@ -1,1 +1,1 @@
-<a htef="itms-services://?action=download-manifest&url=https://linchenhuicn.github.io/manifest.plist">下载安装</a>
+<a href="itms-services://?action=download-manifest&url=https://linchenhuicn.github.io/manifest.plist">下载安装</a>
